fix: sidebar horizontal scroll
Fixes #20

--- a/styles/foundryvtt-devMode.scss
+++ b/styles/foundryvtt-devMode.scss
@@ -85,7 +85,7 @@
   line-height: 1;
   padding: 0.2em;
   position: absolute;
-  right: -1px;
+  right: 0;
   user-select: text;
 
   .dev-mode-tag-actions {
